# presentation-packaging-machine-learning

./: .envrc  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  log.txt  requirements.txt  setup.cfg  slides.md  toto.txt  workspace.dsl  workspace.json  wtf-with-python-packaging.txt
.structurizr/: eula.properties
.structurizr/index/: _0.cfe  _0.cfs  _0.si  segments_1
presentation_pkg_ml/: main.py
