[metadata]
name = presentation-packaging-model
version = 1.0
author = Mehdi Houacine
author_email =
home_page = https://github.com/Mehdi-H/presentation-packaging-machine-learning
license =
description = 
url =
platform = any
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers, DataScientists, MLEngineers
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/Mehdi-H/presentation-packaging-machine-learning/issues

[options]
zip_safe = false
packages = find:
install_requires =
    keras==2.9.0
    tensorflow==2.9.1
include_package_data = True
python_requires = >=3.8

[options.entry_points]
console_scripts =
    pkg-ml = presentation_pkg_ml.main:main